<resources>
    <string name="app_name">Implude</string>
    <string name="firestorage_ref">gs://impludeapp-1582891257809.appspot.com</string>

    <string name="default_content">오늘 시청각실에서 이주은 세무사님이\n창업에 관련한 세무 내용에 관해 특강을 해주신다고 합니다\n보고싶은 사람은 보세요</string>
    <string name="default_title">세무사님 특강 보러갈 사람?</string>
    <string name="default_date">7월 2일 오후 5시</string>
    <string name="default_place">신관 시청각실</string>
    <string name="default_intro_content">동아리원과 애플리케이션을 사용하여\n 모르는 내용을 질문하거나 게시글을 작성할 수 있습니다</string>
    <string name="default_intro_title">Communication</string>
    <string name="default_setting_content">임플루드 앱에서 로그아웃합니다</string>
    <string name="default_setting_title">로그아웃</string>
    <string name="default_name">장종우</string>
    <string name="default_hint">제목을 입력하세요...</string>

    <string name="text_date">일시</string>
    <string name="text_place">장소</string>
    <string name="text_application">신청하기</string>
    <string name="text_link">링크</string>
    <string name="text_next">다음</string>
    <string name="text_image">이미지</string>
    <string name="text_setting">Setting</string>
    <string name="text_back">back</string>
    <string name="text_setprofile">프로필 설정</string>
    <string name="text_pic">사진</string>
    <string name="text_manage_member">부원 관리</string>
    <string name="text_add_member">부원 추가</string>
    <string name="text_add_announce">공지/신청</string>
    <string name="text_deletebtn">deleteBtn</string>
    <string name="text_name">이름</string>
    <string name="text_add">추가</string>
    <string name="text_confirm">확인</string>

    <string name="logout_content">임플루드 앱에서 로그아웃합니다</string>
    <string name="logout_title">로그아웃</string>
    <string name="profile_content">프로필의 여러가지 것을 변경합니다</string>
    <string name="profile_title">프로필 설정</string>
    <string name="info_content">애플리케이션의 버전등의 정보를 알아봅니다</string>
    <string name="info_title">애플리케이션 정보</string>
    <string name="manage_member_content">부원을 추가하거나 삭제할 수 있습니다</string>
    <string name="manage_member_title">부원 관리</string>
    <string name="text_type">유형</string>
    <string name="text_whiteboard">WhiteBoard</string>
    <string name="text_important_notice">중요한 공지</string>
    <string name="text_add_link">링크 걸기</string>
    <string name="text_able_comment">댓글 활성화</string>
    <string name="text_notice">공지</string>

</resources>
