<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_notice"
            android:theme="@style/SubTitleText"/>

        <CheckBox
            android:id="@+id/check_important"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/text_important_notice"
            android:textColor="@color/black"
            android:buttonTint="@color/colorAccent"/>

        <CheckBox
            android:id="@+id/check_add_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_add_link"
            android:textColor="@color/black"
            android:buttonTint="@color/colorAccent"/>

        <CheckBox
            android:id="@+id/check_able_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/text_able_comment"
            android:textColor="@color/black"
            android:buttonTint="@color/colorAccent"/>

        <com.implude.officialapp.custom.CupertinoEditText
            android:id="@+id/edit_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            app:title="링크"
            app:hint="링크를 입력하세요..." />

    </LinearLayout>

</layout>